 2003-09-25 James Turner <james@worldforge.org>
    - skstream/skstream.cpp: Fully qualify all libc and system calls as
      being explicitly in the global namespace.
 2003-09-24 James Turner <james@worldforge.org>
    - skstream/skstreamconfig.h.pbx: define HAVE_GETADDRINFO and HAVE_IN_ADDR_T
      for ProjectBuilder (framework) builds on OS-X, since OS-X supports
      these features.
 2003-09-24 Al Riddoch <alriddoch@zepler.org>
    - skstream/skstream.cpp: Implement non-blocking connect with addrinfo list.
 2003-09-24 Al Riddoch <alriddoch@zepler.org>
    - Typo in in_addr_t check fixed.
    - skstream/skstream.cpp: Missed out typedef keyword fix.
 2003-09-24 Al Riddoch <alriddoch@zepler.org>
    - skstream/skstream.cpp: Add check, and fallback definition for
      in_addr_t.
 2003-09-24 Al Riddoch <alriddoch@zepler.org>
    - skstream/skstream.h, skstream/skstream.cpp: Re-write connecting
      code for IP datagram and stream sockets so they try each of the
      results from getaddrinfo in turn. Needs work on non-blocking
      sockets.
 2003-09-23 Al Riddoch <alriddoch@zepler.org>
    - skstream/skserver.cpp: Modify bind code that uses getaddrinfo
      so it tries each of the results in turn until one works, instead
      of bailing out on the first failure.
 2003-09-23 Al Riddoch <alriddoch@zepler.org>
    - ping/ping.cpp: Add include required since headers were simplified.
 2003-09-23 Al Riddoch <alriddoch@zepler.org>
    - skstream/skserver.h: Make service an int in setService() as it always
      is elsewhere.
    - skstream/skserver.h, skstream/skserver.cpp: Make open() methods return
      true on success, and false on failure.
    - skstream/skserver.h, skstream/skserver.cpp: Add new method for
      creating and binding to a socket, to avoid duplicating code.
 2003-09-06 Martin Pollard <circlemaster@blueyonder.co.uk>
    - configure.in: changed win32 code to use winsock2.h instead of winsock.h.