@@ -1,3 +1,5 @@
+ 2003-09-25 Al Riddoch <alriddoch@zepler.org>
+    - Remove messy attempt to handle IPv6 addresses without getaddrinfo
  2003-09-25 James Turner <james@worldforge.org>
     - skstream/skstream.cpp: Fully qualify all libc and system calls as
       being explicitly in the global namespace.
